--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
           </li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="+110001111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+      <address>
+          <ul>
+            <li>
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+              <a href="+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+      </address>
     </header>
     <main>
       <!-- Section Hero -->
@@ -85,7 +87,7 @@
           </li>
           <li>
             <img
-              src="/images/doing/img-2.jpg"
+              src="./images/doing/img-2.jpg"
               alt="phones"
               width="360"
               height="300"
