--- a/index.html
+++ b/index.html
@@ -4,39 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- Section Header -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="./index.html">Studio</a>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-up">Studio</span></a
+        >
+        <ul class="nav-list list">
+          <li class="nav-item">
+            <a class="link nav-link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="#about">Portfolio</a>
+          <li class="nav-item">
+            <a class="link nav-link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="#">Contacts</a>
+          <li class="nav-item">
+            <a class="link nav-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-          <ul>
-            <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-              <a href="+110001111111">+11 (000) 111-11-11</a>
-            </li>
-          </ul>
+        <ul class="list">
+          <li class="nav-contacts">
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="nav-contacts">
+            <a class="link" href="+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
     <main>
       <!-- Section Hero -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!-- Section About -->
@@ -152,7 +163,9 @@
     </main>
     <!-- Section Footer -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-down">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
