index _ portfolio _style

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!-- Section Header -->
     <header>
       <nav>
-        <a class="logo" href="./index.html"
+        <a class="link logo" href="./index.html"
           >Web<span class="logo-up">Studio</span></a
         >
         <ul class="nav-list list">
@@ -48,68 +48,87 @@
       <!-- Section filter buttons -->
       <section>
         <ul class="list">
-          <li><button></button></li>
-          <li><button></button></li>
-          <li><button></button></li>
-          <li><button></button></li>
-          <li><button></button></li>
+          <li>
+            <button class="btn filter-btn">All</button>
+          </li>
+          <li>
+            <button class="btn filter-btn">Web Site</button>
+          </li>
+          <li>
+            <button class="btn filter-btn">App</button>
+          </li>
+          <li>
+            <button class="btn filter-btn">Design</button>
+          </li>
+          <li>
+            <button class="btn filter-btn">Marketing</button>
+          </li>
         </ul>
       </section>
       <!-- Section cards -->
       <ul class="list">
         <li>
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./images/cards/img-1.jpg" alt="Banking" width: 360px;
+          height: 300px;/>
+          <h3 class="subtitle">Banking App Interface Concept</h3>
+          <p class="card-subtitle" >App</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./images/cards/img-2.jpg" alt="Cashless" width: 360px;
+          height: 300px;/>
+          <h3 class="subtitle">Cashless Payment</h3>
+          <p class="card-subtitle" >Marketing</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./images/cards/img-3.jpg" alt="Meditation" width: 360px;
+          height: 300px;/>
+          <h3 class="subtitle">Meditation App</h3>
+          <p class="card-subtitle" >App</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./images/cards/img-4.jpg" alt="Taxi" width: 360px; height:
+          300px;/>
+          <h3 class="subtitle">Taxi Service</h3>
+          <p class="card-subtitle" >Marketing</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./images/cards/img-5.jpg" alt="Screen Illustrations" width:
+          360px; height: 300px;/>
+          <h3 class="subtitle">Screen Illustrations</h3>
+          <p class="card-subtitle" >Design</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./images/cards/img-6.jpg" alt="Online Courses" width: 360px;
+          height: 300px;/>
+          <h3 class="subtitle">Online Courses</h3>
+          <p class="card-subtitle" >Marketing</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./images/cards/img-7.jpg" alt="Instagram Stories" width:
+          360px; height: 300px;/>
+          <h3 class="subtitle">Instagram Stories Concept</h3>
+          <p class="card-subtitle" >Design</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./images/cards/img-8.jpg" alt="Organic Food" width: 360px;
+          height: 300px;/>
+          <h3 class="subtitle">Organic Food</h3>
+          <p class="card-subtitle" >Web Site</p>
         </li>
         <li>
-          <img src="" alt="" />
-          <h3></h3>
-          <p></p>
+          <img src="./images/cards/img-9.jpg" alt="Fresh Coffee" width: 360px;
+          height: 300px;/>
+          <h3 class="subtitle">Fresh Coffee</h3>
+          <p class="card-subtitle" >Web Site</p>
         </li>
       </ul>
     </main>
     <!-- Section Footer -->
-    <footer>
-      <a class="logo" href="./index.html"
+    <footer class="footer">
+      <a class="link logo" href="./index.html"
         >Web<span class="logo-down">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
