--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Section Header -->
     <header>
       <nav>
-        <a class="logo" href="./index.html"
+        <a class="link logo" href="./index.html"
           >Web<span class="logo-up">Studio</span></a
         >
         <ul class="nav-list list">
@@ -46,38 +46,38 @@
     </header>
     <main>
       <!-- Section Hero -->
-      <section class="hero-section">
+      <section class="hero-section section">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="btn hero-btn" type="button">Order Service</button>
       </section>
       <!-- Section About -->
       <section id="about">
-        <h2 hidden>About company</h2>
-        <ul>
+        <h2 class="title" hidden>About company</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="subtitle">Strategy</h3>
+            <p class="undertitle">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="subtitle">Punctuality</h3>
+            <p class="undertitle">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="subtitle">Diligence</h3>
+            <p class="undertitle">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="subtitle">Technologies</h3>
+            <p class="undertitle">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -86,8 +86,8 @@
       </section>
       <!-- Section  What are we doing-->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/doing/img-1.jpg"
@@ -115,9 +115,9 @@
         </ul>
       </section>
       <!-- Section Our Team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team-section section">
+        <h2 class="title">Our Team</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/team/img-1.jpg"
@@ -125,8 +125,8 @@
               width="246"
               height="260"
             />
-            <p>Mark Guerrero</p>
-            <p>Product Designer</p>
+            <p class="subtitle">Mark Guerrero</p>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -135,8 +135,8 @@
               width="246"
               height="260"
             />
-            <p>Tom Ford</p>
-            <p>Frontend Developer</p>
+            <p class="subtitle">Tom Ford</p>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -145,8 +145,8 @@
               width="246"
               height="260"
             />
-            <p>Camila Garcia</p>
-            <p>Marketing</p>
+            <p class="subtitle">Camila Garcia</p>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img
@@ -155,18 +155,18 @@
               width="246"
               height="260"
             />
-            <p>Daniel Wilson</p>
-            <p>UI Designer</p>
+            <p class="subtitle">Daniel Wilson</p>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Section Footer -->
-    <footer>
-      <a class="logo" href="./index.html"
+    <footer class="footer">
+      <a class="link logo" href="./index.html"
         >Web<span class="logo-down">Studio</span></a
       >
-      <p>
+      <p  class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
