--- a/index.html
+++ b/index.html
@@ -14,162 +14,182 @@
   </head>
   <body>
     <!-- Section Header -->
-    <header>
-      <nav>
-        <a class="link logo" href="./index.html"
-          >Web<span class="logo-up">Studio</span></a
-        >
-        <ul class="nav-list list">
-          <li class="nav-item">
-            <a class="link nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="link nav-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="link nav-link" href="#">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="list">
-          <li class="nav-contacts">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="nav-contacts">
-            <a class="link" href="+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="nav-wrapp">
+          <a class="link logo" href="./index.html"
+            >Web<span class="logo-up">Studio</span></a
+          >
+          <ul class="nav-list list">
+            <li class="nav-item">
+              <a class="link nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="link nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="link nav-link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="contact-list list">
+            <li class="nav-contacts">
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="nav-contacts">
+              <a class="link" href="+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Section Hero -->
       <section class="hero-section section">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="btn hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="btn hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <!-- Section About -->
-      <section id="about">
-        <h2 class="title" hidden>About company</h2>
-        <ul class="list">
-          <li>
-            <h3 class="subtitle">Strategy</h3>
-            <p class="undertitle">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Punctuality</h3>
-            <p class="undertitle">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Diligence</h3>
-            <p class="undertitle">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="subtitle">Technologies</h3>
-            <p class="undertitle">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section id="about" class="section about-section">
+        <div class="container about-container">
+          <h2 class="title" hidden>About company</h2>
+          <ul class="list about-list">
+            <li class="about-item">
+              <h3 class="subtitle about-subtitle">Strategy</h3>
+              <p class="about-title">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="subtitle about-subtitle">Punctuality</h3>
+              <p class="about-title">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="subtitle about-subtitle">Diligence</h3>
+              <p class="about-title">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="about-item">
+              <h3 class="subtitle about-subtitle">Technologies</h3>
+              <p class="about-title">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section  What are we doing-->
-      <section>
-        <h2 class="title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/doing/img-1.jpg"
-              alt="macmini"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/doing/img-2.jpg"
-              alt="phones"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/doing/img-3.jpg"
-              alt="tablet"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container doing-container">
+          <h2 class="title doing-title">What are we doing</h2>
+          <ul class="list doing-list">
+            <li>
+              <img
+                src="./images/doing/img-1.jpg"
+                alt="macmini"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/doing/img-2.jpg"
+                alt="phones"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/doing/img-3.jpg"
+                alt="tablet"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section Our Team -->
       <section class="team-section section">
-        <h2 class="title">Our Team</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/team/img-1.jpg"
-              alt="product-designer"
-              width="246"
-              height="260"
-            />
-            <p class="subtitle">Mark Guerrero</p>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/img-2.jpg"
-              alt="developer"
-              width="246"
-              height="260"
-            />
-            <p class="subtitle">Tom Ford</p>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/img-3.jpg"
-              alt="marketing"
-              width="246"
-              height="260"
-            />
-            <p class="subtitle">Camila Garcia</p>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team/img-4.jpg"
-              alt="ui-designer"
-              width="246"
-              height="260"
-            />
-            <p class="subtitle">Daniel Wilson</p>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title team-title">Our Team</h2>
+          <ul class="list team-list">
+            <li class="team-item">
+              <img
+                src="./images/team/img-1.jpg"
+                alt="product-designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-script">
+                <p class="subtitle team-subtitle">Mark Guerrero</p>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/img-2.jpg"
+                alt="developer"
+                width="264"
+                height="260"
+              />
+              <div class="team-script">
+                <p class="subtitle team-subtitle">Tom Ford</p>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/img-3.jpg"
+                alt="marketing"
+                width="264"
+                height="260"
+              />
+              <div class="team-script">
+                <p class="subtitle team-subtitle">Camila Garcia</p>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team/img-4.jpg"
+                alt="ui-designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-script">
+                <p class="subtitle team-subtitle">Daniel Wilson</p>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Section Footer -->
     <footer class="footer">
-      <a class="link logo" href="./index.html"
-        >Web<span class="logo-down">Studio</span></a
-      >
-      <p  class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="link logo logo-footer" href="./index.html"
+          >Web<span class="logo-down">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
