--- a/portfolio.html
+++ b/portfolio.html
@@ -14,124 +14,152 @@
   </head>
   <body>
     <!-- Section Header -->
-    <header>
-      <nav>
-        <a class="link logo" href="./index.html"
-          >Web<span class="logo-up">Studio</span></a
-        >
-        <ul class="nav-list list">
-          <li class="nav-item">
-            <a class="link nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="link nav-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="link nav-link" href="#">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="list">
-          <li class="nav-contacts">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="nav-contacts">
-            <a class="link" href="+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="nav-wrapp">
+          <a class="link logo" href="./index.html"
+            >Web<span class="logo-up">Studio</span></a
+          >
+          <ul class="nav-list list">
+            <li class="nav-item">
+              <a class="link nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="link nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="link nav-link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="contact-list list">
+            <li class="nav-contacts">
+              <a class="link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="nav-contacts">
+              <a class="link" href="+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- Section filter buttons -->
-      <section>
-        <ul class="list">
-          <li>
-            <button class="btn filter-btn">All</button>
-          </li>
-          <li>
-            <button class="btn filter-btn">Web Site</button>
-          </li>
-          <li>
-            <button class="btn filter-btn">App</button>
-          </li>
-          <li>
-            <button class="btn filter-btn">Design</button>
-          </li>
-          <li>
-            <button class="btn filter-btn">Marketing</button>
-          </li>
-        </ul>
+      <section class="section filter-section">
+        <div class="container">
+          <ul class="list filter-list">
+            <li>
+              <button class="btn filter-btn">All</button>
+            </li>
+            <li>
+              <button class="btn filter-btn">Web Site</button>
+            </li>
+            <li>
+              <button class="btn filter-btn">App</button>
+            </li>
+            <li>
+              <button class="btn filter-btn">Design</button>
+            </li>
+            <li>
+              <button class="btn filter-btn">Marketing</button>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Section cards -->
-      <ul class="list">
-        <li>
-          <img src="./images/cards/img-1.jpg" alt="Banking" width: 360px;
-          height: 300px;/>
-          <h3 class="subtitle">Banking App Interface Concept</h3>
-          <p class="card-subtitle" >App</p>
-        </li>
-        <li>
-          <img src="./images/cards/img-2.jpg" alt="Cashless" width: 360px;
-          height: 300px;/>
-          <h3 class="subtitle">Cashless Payment</h3>
-          <p class="card-subtitle" >Marketing</p>
-        </li>
-        <li>
-          <img src="./images/cards/img-3.jpg" alt="Meditation" width: 360px;
-          height: 300px;/>
-          <h3 class="subtitle">Meditation App</h3>
-          <p class="card-subtitle" >App</p>
-        </li>
-        <li>
-          <img src="./images/cards/img-4.jpg" alt="Taxi" width: 360px; height:
-          300px;/>
-          <h3 class="subtitle">Taxi Service</h3>
-          <p class="card-subtitle" >Marketing</p>
-        </li>
-        <li>
-          <img src="./images/cards/img-5.jpg" alt="Screen Illustrations" width:
-          360px; height: 300px;/>
-          <h3 class="subtitle">Screen Illustrations</h3>
-          <p class="card-subtitle" >Design</p>
-        </li>
-        <li>
-          <img src="./images/cards/img-6.jpg" alt="Online Courses" width: 360px;
-          height: 300px;/>
-          <h3 class="subtitle">Online Courses</h3>
-          <p class="card-subtitle" >Marketing</p>
-        </li>
-        <li>
-          <img src="./images/cards/img-7.jpg" alt="Instagram Stories" width:
-          360px; height: 300px;/>
-          <h3 class="subtitle">Instagram Stories Concept</h3>
-          <p class="card-subtitle" >Design</p>
-        </li>
-        <li>
-          <img src="./images/cards/img-8.jpg" alt="Organic Food" width: 360px;
-          height: 300px;/>
-          <h3 class="subtitle">Organic Food</h3>
-          <p class="card-subtitle" >Web Site</p>
-        </li>
-        <li>
-          <img src="./images/cards/img-9.jpg" alt="Fresh Coffee" width: 360px;
-          height: 300px;/>
-          <h3 class="subtitle">Fresh Coffee</h3>
-          <p class="card-subtitle" >Web Site</p>
-        </li>
-      </ul>
+      <section class="section card-section">
+        <div class="container">
+          <ul class="list card-list">
+            <li>
+              <img src="./images/cards/img-1.jpg" alt="Banking" width: 360px;
+              height: 300px;/>
+              <div class="card-script">
+                <h3 class="subtitle">Banking App Interface Concept</h3>
+                <p class="card-subtitle">App</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/cards/img-2.jpg" alt="Cashless" width: 360px;
+              height: 300px;/>
+              <div class="card-script">
+                <h3 class="subtitle">Cashless Payment</h3>
+                <p class="card-subtitle">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/cards/img-3.jpg" alt="Meditation" width: 360px;
+              height: 300px;/>
+              <div class="card-script">
+                <h3 class="subtitle">Meditation App</h3>
+                <p class="card-subtitle">App</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/cards/img-4.jpg" alt="Taxi" width: 360px;
+              height: 300px;/>
+              <div class="card-script">
+                <h3 class="subtitle">Taxi Service</h3>
+                <p class="card-subtitle">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/cards/img-5.jpg" alt="Screen Illustrations"
+              width: 360px; height: 300px;/>
+              <div class="card-script">
+                <h3 class="subtitle">Screen Illustrations</h3>
+                <p class="card-subtitle">Design</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/cards/img-6.jpg" alt="Online Courses" width:
+              360px; height: 300px;/>
+              <div class="card-script">
+                <h3 class="subtitle">Online Courses</h3>
+                <p class="card-subtitle">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/cards/img-7.jpg" alt="Instagram Stories" width:
+              360px; height: 300px;/>
+              <div class="card-script">
+                <h3 class="subtitle">Instagram Stories Concept</h3>
+                <p class="card-subtitle">Design</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/cards/img-8.jpg" alt="Organic Food" width:
+              360px; height: 300px;/>
+              <div class="card-script">
+                <h3 class="subtitle">Organic Food</h3>
+                <p class="card-subtitle">Web Site</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/cards/img-9.jpg" alt="Fresh Coffee" width:
+              360px; height: 300px;/>
+              <div class="card-script">
+                <h3 class="subtitle">Fresh Coffee</h3>
+                <p class="card-subtitle">Web Site</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <!-- Section Footer -->
     <footer class="footer">
-      <a class="link logo" href="./index.html"
-        >Web<span class="logo-down">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="link logo logo-footer" href="./index.html"
+          >Web<span class="logo-down">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
