--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Normalize -->
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <!-- Custom styles  -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -95,7 +102,7 @@
         <div class="container doing-container">
           <h2 class="title doing-title">What are we doing</h2>
           <ul class="list doing-list">
-            <li>
+            <li class="doing-item">
               <img
                 src="./images/doing/img-1.jpg"
                 alt="macmini"
@@ -103,7 +110,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="doing-item">
               <img
                 src="./images/doing/img-2.jpg"
                 alt="phones"
@@ -111,7 +118,7 @@
                 height="300"
               />
             </li>
-            <li>
+            <li class="doing-item">
               <img
                 src="./images/doing/img-3.jpg"
                 alt="tablet"
@@ -135,7 +142,7 @@
                 height="260"
               />
               <div class="team-script">
-                <p class="subtitle team-subtitle">Mark Guerrero</p>
+                <h3 class="subtitle team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
               </div>
             </li>
@@ -147,7 +154,7 @@
                 height="260"
               />
               <div class="team-script">
-                <p class="subtitle team-subtitle">Tom Ford</p>
+                <h3 class="subtitle team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
               </div>
             </li>
@@ -159,7 +166,7 @@
                 height="260"
               />
               <div class="team-script">
-                <p class="subtitle team-subtitle">Camila Garcia</p>
+                <h3 class="subtitle team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
               </div>
             </li>
@@ -171,7 +178,7 @@
                 height="260"
               />
               <div class="team-script">
-                <p class="subtitle team-subtitle">Daniel Wilson</p>
+                <h3 class="subtitle team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
               </div>
             </li>
