--- a/portfolio.html
+++ b/portfolio.html
@@ -79,108 +79,134 @@
 
           <ul class="list card-list">
             <li class="card-item">
-              <img src="./images/cards/img-1.jpg" alt="Banking" width="360"
-              height="300"/>
-              <div class="card-script">
-                <h3 class="subtitle card-subtitle">
-                  Banking App Interface Concept
-                </h3>
-                <p class="text-subtitle">App</p>
-              </div>
+              <a class="link card-link" href="">
+                <img
+                  src="./images/cards/img-1.jpg"
+                  alt="Banking"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-script">
+                  <h3 class="subtitle card-subtitle">
+                    Banking App Interface Concept
+                  </h3>
+                  <p class="text-subtitle">App</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <img src="./images/cards/img-2.jpg" alt="Cashless" width="360"
-              height="300"/>
-              <div class="card-script">
-                <h3 class="subtitle card-subtitle">Cashless Payment</h3>
-                <p class="text-subtitle">Marketing</p>
-              </div>
+              <a class="link card-link" href="">
+                <img
+                  src="./images/cards/img-2.jpg"
+                  alt="Cashless"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-script">
+                  <h3 class="subtitle card-subtitle">Cashless Payment</h3>
+                  <p class="text-subtitle">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <img
-                src="./images/cards/img-3.jpg"
-                alt="Meditation"
-                width="360"
-                height="300"
-              />
-              <div class="card-script">
-                <h3 class="subtitle card-subtitle">Meditation App</h3>
-                <p class="text-subtitle">App</p>
-              </div>
+              <a class="link card-link" href="">
+                <img
+                  src="./images/cards/img-3.jpg"
+                  alt="Meditation"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-script">
+                  <h3 class="subtitle card-subtitle">Meditation App</h3>
+                  <p class="text-subtitle">App</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <img
-                src="./images/cards/img-4.jpg"
-                alt="Taxi"
-                width="360"
-                height="300"
-              />
-              <div class="card-script">
-                <h3 class="subtitle card-subtitle">Taxi Service</h3>
-                <p class="text-subtitle">Marketing</p>
-              </div>
+              <a class="link card-link" href="">
+                <img
+                  src="./images/cards/img-4.jpg"
+                  alt="Taxi"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-script">
+                  <h3 class="subtitle card-subtitle">Taxi Service</h3>
+                  <p class="text-subtitle">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <img
-                src="./images/cards/img-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <div class="card-script">
-                <h3 class="subtitle card-subtitle">Screen Illustrations</h3>
-                <p class="text-subtitle">Design</p>
-              </div>
+              <a class="link card-link" href="">
+                <img
+                  src="./images/cards/img-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-script">
+                  <h3 class="subtitle card-subtitle">Screen Illustrations</h3>
+                  <p class="text-subtitle">Design</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <img
-                src="./images/cards/img-6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <div class="card-script">
-                <h3 class="subtitle card-subtitle">Online Courses</h3>
-                <p class="text-subtitle">Marketing</p>
-              </div>
+              <a class="link card-link" href="">
+                <img
+                  src="./images/cards/img-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-script">
+                  <h3 class="subtitle card-subtitle">Online Courses</h3>
+                  <p class="text-subtitle">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <img
-                src="./images/cards/img-7.jpg"
-                alt="Instagram Stories"
-                width="360"
-                height="300"
-              />
-              <div class="card-script">
-                <h3 class="subtitle card-subtitle">
-                  Instagram Stories Concept
-                </h3>
-                <p class="text-subtitle">Design</p>
-              </div>
+              <a class="link card-link" href="">
+                <img
+                  src="./images/cards/img-7.jpg"
+                  alt="Instagram Stories"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-script">
+                  <h3 class="subtitle card-subtitle">
+                    Instagram Stories Concept
+                  </h3>
+                  <p class="text-subtitle">Design</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <img
-                src="./images/cards/img-8.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <div class="card-script">
-                <h3 class="subtitle card-subtitle">Organic Food</h3>
-                <p class="text-subtitle">Web Site</p>
-              </div>
+              <a class="link card-link" href="">
+                <img
+                  src="./images/cards/img-8.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-script">
+                  <h3 class="subtitle card-subtitle">Organic Food</h3>
+                  <p class="text-subtitle">Web Site</p>
+                </div>
+              </a>
             </li>
             <li class="card-item">
-              <img
-                src="./images/cards/img-9.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <div class="card-script">
-                <h3 class="subtitle card-subtitle">Fresh Coffee</h3>
-                <p class="text-subtitle">Web Site</p>
-              </div>
+              <a class="link card-link" href="">
+                <img
+                  src="./images/cards/img-9.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="card-script">
+                  <h3 class="subtitle card-subtitle">Fresh Coffee</h3>
+                  <p class="text-subtitle">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -188,14 +214,52 @@
     </main>
     <!-- Section Footer -->
     <footer class="footer">
-      <div class="container">
-        <a class="link logo logo-footer" href="./index.html"
-          >Web<span class="logo-down">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="text-wrap">
+          <a class="link logo logo-footer" href="./index.html"
+            >Web<span class="logo-down">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="cmedia-wrap">
+          <p class="footer-undertitle">Social media</p>
+          <ul class="list footer-social">
+            <li class="social-item">
+              <a class="link link-social" href="https://www.instagram.com/">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="link link-social" href="https://x.com/">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="link link-social" href="https://www.facebook.com/">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="link link-social"
+                href="https://www.linkedin.com/feed//"
+              >
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
