--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
               <a class="link nav-link" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
-              <a class="link nav-link" href="./portfolio.html">Portfolio</a>
+              <a class="link nav-link active" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-item">
               <a class="link nav-link" href="#">Contacts</a>
@@ -80,12 +82,21 @@
           <ul class="list card-list">
             <li class="card-item">
               <a class="link card-link" href="">
-                <img
-                  src="./images/cards/img-1.jpg"
-                  alt="Banking"
-                  width="360"
-                  height="300"
-                />
+                <div class="card-box">
+                  <img
+                    src="./images/cards/img-1.jpg"
+                    alt="Banking"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-label">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="card-script">
                   <h3 class="subtitle card-subtitle">
                     Banking App Interface Concept
@@ -228,21 +239,30 @@
           <p class="footer-undertitle">Social media</p>
           <ul class="list footer-social">
             <li class="social-item">
-              <a class="link link-social" href="https://www.instagram.com/">
+              <a
+                class="link link-social link-social-footer"
+                href="https://www.instagram.com/"
+              >
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="link link-social" href="https://x.com/">
+              <a
+                class="link link-social link-social-footer"
+                href="https://x.com/"
+              >
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="link link-social" href="https://www.facebook.com/">
+              <a
+                class="link link-social link-social-footer"
+                href="https://www.facebook.com/"
+              >
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
@@ -250,7 +270,7 @@
             </li>
             <li class="social-item">
               <a
-                class="link link-social"
+                class="link link-social link-social-footer"
                 href="https://www.linkedin.com/feed//"
               >
                 <svg class="social-icon" width="24" height="24">
