--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >
           <ul class="nav-list list">
             <li class="nav-item">
-              <a class="link nav-link" href="./index.html">Studio</a>
+              <a class="link nav-link active" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
               <a class="link nav-link" href="./portfolio.html">Portfolio</a>
@@ -458,21 +458,21 @@
           <p class="footer-undertitle">Social media</p>
           <ul class="list footer-social">
             <li class="social-item">
-              <a class="link link-social" href="https://www.instagram.com/">
+              <a class="link link-social link-social-footer" href="https://www.instagram.com/">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="link link-social" href="https://x.com/">
+              <a class="link link-social link-social-footer" href="https://x.com/">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a class="link link-social" href="https://www.facebook.com/">
+              <a class="link link-social link-social-footer" href="https://www.facebook.com/">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
@@ -480,7 +480,7 @@
             </li>
             <li class="social-item">
               <a
-                class="link link-social"
+                class="link link-social link-social-footer"
                 href="https://www.linkedin.com/feed//"
               >
                 <svg class="social-icon" width="24" height="24">
